# ZJU-CS3134M-Project

./: .gitignore  CMakeLists.txt  README.md  buildAndLaunch.ps1  package.ps1  tmpclaude-7a51-cwd  系统设计说明文档.md
include/: Bullet.h  Camera.h  CollisionDetector.h  CollisionGrid.h  Enemy.h  EnemyManager.h  FreeCamera.h  GameObject.h  GameState.h  GenericMesh.h  InputHandler.h  Lighting.h  MeshIO.h  NavigationGrid.h  Player.h  Scene.h  ScreenRecorder.h  Shapes.h  Stob.h  Target.h  Texture.h  UI.h  Vector3.h  camera_controller.h
src/: Bullet.cpp  Camera.cpp  CollisionDetector.cpp  CollisionGrid.cpp  Enemy.cpp  EnemyManager.cpp  FreeCamera.cpp  GameObject.cpp  GenericMesh.cpp  InputHandler.cpp  Lighting.cpp  MeshIO.cpp  NavigationGrid.cpp  Player.cpp  Scene.cpp  ScreenRecorder.cpp  Shapes.cpp  Stob.cpp  Target.cpp  Texture.cpp  UI.cpp  camera_controller.cpp  main.cpp
